# graphics-app-boilerplate

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Workshop/: AssetManager.cpp  Assets.h.in  CMakeLists.txt  Camera.cpp  Cubemap.cpp  Framebuffer.cpp  Input.cpp  Lights.cpp  Material.cpp  Model.cpp  OpenGL.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Texture.h  Transform.cpp  UI.cpp  UniformBuffer.cpp  Workshop.cpp
Workshop/include/Workshop/: Common.h  Framebuffer.h  Model.h  Workshop.h
Workshop/includes/Workshop/: AssetManager.hpp  Assets.hpp.in  Camera.hpp  Common.hpp  Cubemap.hpp  Framebuffer.hpp  Input.hpp  Lights.hpp  Material.hpp  Model.hpp  OpenGL.hpp  Scene.hpp  Shader.hpp  Texture.hpp  Transform.hpp  UI.hpp  UniformBuffer.hpp  Workshop.hpp
Workshop/includes/Workshop/ui/: EditorWindow.hpp  HierarchyWindow.hpp  InspectorWindow.hpp  TextureViewer.hpp
Workshop/test/: CMakeLists.txt  CommonTests.cpp  HierarchyTests.cpp  ShaderTests.cpp  TextureTests.cpp  WorkshopTest.hpp  WorkshopTests.cpp  tests.cpp
Workshop/ui/: EditorWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  TextureViewer.cpp
assets/images/hdr/: little_paris_irradiance.hdr  night_snowy_christmas_irradiance.hdr  the_lost_city_irradiance.hdr
assets/shaders/: debug.vert  editor.frag  editor.vert  fullscreen_quad_outline.frag  fullscreen_quad_texture_sampler.frag  fullscreen_quad_without_vbo.vert  normal_viz.geom  phong.frag  phong.vert  skybox.frag  skybox.vert  solid_color.frag  solid_color.vert  triangle_without_vbo.frag  triangle_without_vbo_frag.glsl  triangle_without_vbo_vert.glsl  unlit.frag  unlit.vert
assets/shaders/editor/: editor.frag  editor.vert  infinite_grid.frag  normal_viz.frag  normal_viz.vert  solid_color.frag
assets/shaders/lib/: Common.glsl  DefaultVertexAttributes.glsl  SceneUniforms.glsl  VertexData.glsl
assets/shaders/lib/lights/: AmbientLight.glsl  DirectionalLights.glsl  HemisphericalLight.glsl  PointLights.glsl
dependencies/: CMakeLists.txt
example-app/: CMakeLists.txt  main.cpp
example-apps/: README.md
example-apps/00-boilerplate/: CMakeLists.txt  boilerplate.frag  boilerplate.vert  main.cpp
example-apps/01-clear/: CMakeLists.txt  main.cpp
example-apps/02-triangle-without-vbo/: CMakeLists.txt  main.cpp
example-apps/03-cuda-start/: CMakeLists.txt  kernels.cu  kernels.h  main.cpp  main.cu  vector_add.cu  vector_add.h
example-apps/04-cuda-mandelbrot/: CMakeLists.txt  main.cpp
example-apps/05-margolus-automata-sand/: CMakeLists.txt  kernels.cu  kernels.h  main.cpp
example-apps/06-learnopengl-stencil-testing/: CMakeLists.txt  main.cpp
example-apps/07-outlines-via-grow/: CMakeLists.txt  main.cpp
example-apps/08-learnopengl-cubemaps/: CMakeLists.txt  main.cpp  reflective.frag  reflective.vert  skybox_not_optimized.frag  skybox_not_optimized.vert
example-apps/09-learnopengl-shadow-mapping/: CMakeLists.txt  depth_viz.frag  main.cpp  phong_shadowed.frag  phong_shadowed.vert  shadow_mapping_depth.frag  shadow_mapping_depth.vert
example-apps/10-uv-atlas/: CMakeLists.txt  LightMapper.cpp  LightMapper.hpp  debug.frag  debug.vert  lightmap.frag  lightmap.vert  main.cpp  uv_atlas.frag  uv_atlas.vert
example-apps/11-rendering-cookbook-infinite-grid/: CMakeLists.txt  grid.frag  grid.vert  main.cpp
example-apps/12-normal-mapping/: CMakeLists.txt  main.cpp  normal_mapped.frag
example-apps/13-bloom/: CMakeLists.txt  blur.frag  lumi_thresh.vert  lumi_tresh.frag  main.cpp
example-apps/14-material-system/: CMakeLists.txt  boilerplate.frag  boilerplate.vert  main.cpp
example-apps/15-smallpaint/: CMakeLists.txt  smallpaint_painterly.cpp
example-apps/16-embree/: CMakeLists.txt  EmbreeUtils.cpp  EmbreeUtils.hpp  main.cpp
render-graph/: CMakeLists.txt  Workshop.cpp  Workshop.h  main.cpp
src/: CMakeLists.txt
